test_suite/ui/literal_out_of_range.rs
#[derive(Copy, Clone, enumflags2::BitFlags)]
enum Foo {
    BigNumber = 0xdeadbeefcafebabe1337,
}

fn main() {}
